syntax = "proto3";
package proto;

import "proto/action.proto";
import "proto/player.proto";

option go_package = "github.com/ohanan/card_proto/pkg/protoservice/proto";

message GetPlayerInfo {
  message Req {
    string user_id = 1;
  }
  message Resp {
    PlayerInfo info = 1;
  }
}
message RegisterNotify {
  message Req {
    repeated string event = 1;
  }
  message Resp {}
}

message AskAction {
  message Req {
    repeated Action actions = 1;
  }
  message Resp {
    ActionResult result = 1;
  }
}
